2008-07-23  Edward Hervey  <edward.hervey@collabora.co.uk>

	* ffmpegrev:
	Updating to today's ffmpeg upstream revision, mostly to fix a security
	issue.

2008-07-11  Mark Nauwelaerts  <mark.nauwelaerts@collabora.co.uk>

	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_caps_with_codecid):
	Prevent likely segfault on EMPTY provided caps.

2008-07-06  Mark Nauwelaerts  <mark.nauwelaerts@collabora.co.uk>

	Based on a patch by: Aurelien Grimaud <gstelzz at yahoo dot fr>

	* ext/ffmpeg/gstffmpegmux.c: (gst_ffmpegmux_collected):
	Properly convert buffer duration to an ffmpeg packet duration.
	Fixes #371939.

2008-07-01  Jan Schmidt  <jan.schmidt@sun.com>

	* ext/ffmpeg/gstffmpegdec.c:
	If ffmpeg reports 0 bytes of input data consumed, don't break out
	unless it also didn't produce any output. Fixes the audio in #377400
	and doesn't break anything else I've tested.

	Enable the mp3 parser, and set mp3 and mpeg2-video decoding autoplug
	at marginal level, as they seem to both work fine now.

2008-06-13  Edward Hervey  <edward.hervey@collabora.co.uk>

	* ext/ffmpeg/gstffmpegcodecmap.c:
	(gst_ffmpeg_formatid_get_codecids):
	MP4 does not allow H263 and AMR.

2008-06-13  Edward Hervey  <edward.hervey@collabora.co.uk>

	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_codecid_to_caps),
	(gst_ffmpeg_get_codecid_longname):
	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_base_init),
	(gst_ffmpegdec_register):
	* ext/ffmpeg/gstffmpegenc.c: (gst_ffmpegenc_base_init),
	(gst_ffmpegenc_register):
	* ext/ffmpeg/gstffmpegmux.c: (gst_ffmpegmux_register):
	FFMpeg now provides proper long_name for AVCodec, remove our
	internal mapping and directly use upstream naming.
	Improve debugging messages.
	Remove g_warning() which isn't really needed.
	Add mapping for new codecs (MPC8, DNXHD, MIMIC, VMNC)

2008-06-13  Edward Hervey  <edward.hervey@collabora.co.uk>

	* ext/ffmpeg/Makefile.am:
	* ffmpegrev:
	Bump upstream ffmpeg revision to todays (rev 13766).
	ffmpeg now requires libbz2.
